# bake-engine

./: .envrc  README.md  build-settings.yml  pyproject.toml
.github/workflows/: baker.yml
docker/conductor/: Dockerfile
docker/sqlite-and-ui/: Dockerfile
docker/ui/: Dockerfile
