[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bake-engine"
version = "0.0.1"
description = "Baker setup repository"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "baker-cli>=1.0.1",
]

[project.scripts]
# Optional: expose a local convenience script name if needed
# baker = "baker_cli.__main__:main"
